--- a/angular.json
+++ b/angular.json
@@ -54,7 +54,8 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "baseHref": "./simple-quiz/"
             },
             "development": {
               "buildOptimizer": false,
